--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: "LETREC"
-description: "We develop software"
+title: "LETREC AB"
+description: "We develop software."
 logo: https://avatars.githubusercontent.com/u/85708224?s=200
 
